# MemSafeDemo

./: LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/memsafe/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-mte.cpp  log.h  mte_header.h  native-lib.cpp  ubsan-demo.cpp  ubsan-demo.h  use_mte.cpp  use_mte.h
app/src/main/cpp/ubsan/: Android.bp  readme.txt  ubsan-demo.cpp
app/src/main/java/com/memsafe/demo/: AccessProperties.java  ConsumeJavaMem.java  ConsumeNativeMem.java  CopyELF.java  JavaMemLeakActivity.java  LeakResourceActivity.java  MainActivity.java  RunShellCmd.java  SettingsActivity.java
app/src/main/res/layout/: activity_leakmem_activity_not_distroy.xml  activity_leakmem_resource_not_distroy.xml  activity_main.xml  activity_settings.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vivo/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
